Main content spacing bug fixes

--- a/src/styles/content.css
+++ b/src/styles/content.css
@@ -1,8 +1,9 @@
 .layout__content {
   grid-area: content;
   background-color: #1b1b1f;
-  width: 100vw;
-
+  max-width: 100vw;
+  width: 100%;
+  
   .content__wrapper {
     text-align: left;
     white-space: normal;
